Fix - Scrollbar

--- a/estilos/estilorapport.css
+++ b/estilos/estilorapport.css
@@ -61,6 +61,7 @@ a>p {
     background-color: black;
     height: 100%;
     overflow: scroll;
+    scrollbar-width: none;
 }
 
 .chat {
